<resources>
    <string name="app_name">Klan</string>
    <string name="nav_header_title">Profile name</string>
    <string name="nav_header_subtitle">Profile email/username</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_readingList">Reading list</string>
    <string name="menu_newStory">New story</string>
    <string name="menu_stories">Stories</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_log">Log out</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="article_description">Article Description</string>
    <string name="article_heading">Article Heading</string>
    <string name="topic_name">Topic Name</string>
    <string name="article_author">Article Author</string>
    <string name="slogan">Ideas that set your mind in motion</string>
    <string name="existing_account_prompt">Already have an account?</string>
    <string name="welcome_prompt">Welcome Back.</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_account_prompt">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_out">Log out</string>
</resources>
