<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/colorText"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_prompt"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textColor="@color/colorText"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/colorText"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        />


    <EditText
        android:id="@+id/password_edit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textColor="@color/colorText"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:textColorHint="@color/colorText"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:text="@string/sign_in"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" />




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_account_prompt"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="10dp"
        android:visibility="gone" />


</LinearLayout>