<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="italic"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textColor="@color/colorText"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:textColorHint="@color/colorText"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />


    <EditText
        android:id="@+id/email_edit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textColor="@color/colorText"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/colorText"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        />


    <EditText
        android:id="@+id/password_edit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textColor="@color/colorText"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:textColorHint="@color/colorText"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />


    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"/>


    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center" />


    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existing_account_prompt"
            android:textColor="@color/colorText"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/sign_in_button"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="1dp"
        android:visibility="gone" />

</LinearLayout>